@@ -1,0 +1,2 @@
+MD5 b6621595c89ef071a42ffacc4727fc88 linuxtv-dvb-1.1.0.tar.bz2 314833
+MD5 b5f90e59fbfd5104074bc511640c39e6 dvb-ttpci-01.fw 226460
