@@ -1,6 +1,12 @@
 # ChangeLog for media-video/linuxdvb
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.7 2003/12/10 13:56:39 rootshell Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.8 2004/02/15 12:23:03 mad Exp $
+
+*linuxtv-dvb-1.1.0 (15 Feb 2004)
+  15 Feb 2004; Martin Hierling <mad@cc.fh-lippe.de>
+  new driver release, no modules.conf at the moment
+  removed dvb_net scripts, added wrapper for modules.autoload
+
 *linuxtv-dvb-1.0.1 (10 Dec 2003)
   10 Dec 2003; Florian Schilhabel <fernsehleo@gmx.net>
   Version Bump to r20031108
